--- a/source/_patterns/02-organisms/paragraphs/card/_card.scss
+++ b/source/_patterns/02-organisms/paragraphs/card/_card.scss
@@ -9,4 +9,7 @@
       width: calc( 100% + (#{$general-h-spacing} * 2));
     }
   }
+  &__title {
+    margin-top: 0;
+  }
 }
