--- a/source/_patterns/02-organisms/promotions-block/_promotions-block.scss
+++ b/source/_patterns/02-organisms/promotions-block/_promotions-block.scss
@@ -5,9 +5,11 @@
     flex-flow: row wrap;
     align-items: stretch;
     justify-content: center;
-
-    @include breakpoint-up($bp--medium) {
-      .qh__teaser-promotion {
+    
+    .qh__teaser-promotion {
+      flex: 0 1 100%;
+      
+      @include breakpoint-up($bp--medium) {
         flex: 0 1 calc(50% - 1rem);
         margin-left: 0;
         margin-top: 1.5rem;
@@ -16,28 +18,24 @@
           flex: 0 1 47.5%;
         }
 
-        &:nth-child(2n-1),
-        &:nth-child(2) {
+        &:nth-child(2n) {
           margin-left: 1rem;
         }
       }
-    }
 
-    @include breakpoint-up($bp--large) {
-      .qh__teaser-promotion {
+      @include breakpoint-up($bp--large) {
         flex: 0 1 calc(33% - 0.5rem);
 
         @include onlyIE() {
           flex: 0 1 31%;
         }
 
-        &:nth-child(2n-1),
-        &:nth-child(2) {
+        &:nth-child(2n) {
           margin-left: 0;
         }
 
         &:nth-child(3n-1),
-        &:nth-child(3) {
+        &:nth-child(3n) {
           margin-left: 1rem;
         }
       }
